# ai-agents-class

./: .gitignore
chatgpt-clone/: chat-gpt-clone-memory.db  chat-gpt-clone-memory.db-shm  chat-gpt-clone-memory.db-wal  dummy-agent.ipynb  life-coach-agent.py  main.py  개인 목표.txt
complete_story_book_maker/: agent.py  prompt.py  pyproject.toml
complete_story_book_maker/.adk/: session.db
complete_story_book_maker/sub_agents/: agent.py
customer-support-agent/: main.py  restaurant-bot-memory.db  restaurant-bot-memory.db-shm  restaurant-bot-memory.db-wal
customer-support-agent/restaurant_bot/: agent_definitions.py  app.py  guardrails.py  models.py
demo-project/: README.md  langgraph.json  learning_material.txt  main.ipynb  main.py  pyproject.toml
demo-project/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  (+1 more)
email-refiner-agent/: api_mode.ipynb  code_mode.ipynb  deploy.py  pyproject.toml  remote.py
email-refiner-agent/travel_advisor_agent/.adk/: session.db
financial-analyst/: pyproject.toml
hello-langgraph/: main.ipynb
job-hunter-agent/: tools.py
my-first-agent/: daily-02.ipynb  daily-03.ipynb  daily-05.ipynb  main.ipynb  pyproject.toml
new-reader-agent/: pyproject.toml
restaurant-bot/: .gitignore  customer-support-memory.db-shm  customer-support-memory.db-wal  main.py  models.py  output_guardrails.py  requirements.txt  tools.py
story_book_maker/: agent.py  main.py  prompt.py  pyproject.toml
youtube-thumbnail-maker/: graph.py  main.ipynb
youtube_shorts_maker/: agent.py  prompt.py
(+72 files in other folders)
